--- a/index.html
+++ b/index.html
@@ -10,22 +10,33 @@
                 border-radius: 15px;
                 border: 1px #000 solid;
             }
+            .container {
+                height: 100%;
+            }
+            html, body {
+                height: 100%;
+            }
         </style>
     </head>
     <body>
-                     
-        <form action="https://google.com/search">
-            <div class="d-flex align-items-center flex-column justify-content-center h-100">   
-                <div class="form-group">
-                    <input class="form-control form-control-md" type="text" name="q", id="foo">
-                </div>
-            </div>
-            <div class="d-flex align-items-center flex-column justify-content-center h-100">   
+        <div class="container">            
+            <div class="row h-100">
+                <div class="col-sm-12 my-auto">
+                    <form action="https://google.com/search">
+                        <div class="d-flex align-items-center flex-column justify-content-center h-100">   
+                            <div class="form-group">
+                                <input class="form-control form-control-md" type="text" name="q" id="foo">
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center flex-column justify-content-center h-100">
 
-                <div class="form-group">
-                    <input type="submit" value="Google Search" class="btn btn-info btn-lg btn-block">
+                            <div class="form-group">
+                                <input type="submit" value="Google Search" class="btn btn-info btn-lg btn-block">
+                            </div>
+                        </div>
+                    </form> 
                 </div>
             </div>
-        </form> 
+        </div>
     </body>
 </html>
