--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">
 
                             <div class="form-group">
-                                <input type="submit" value="Google Search" class="btn btn-info btn-lg btn-block">
+                                <input type="submit" value="Google Search" class="btn">
                             </div>
                         </div>
                     </form> 
