Added links using Flexbox

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
             html, body {
                 height: 100%;
             }
+            .link_div {
+                margin-left: 100px;
+            }
         </style>
     </head>
     <body>
-        <div class="row">
-            <div class="col-10"></div>
-            <div class="col-1">
-                <a href="google_image.html" class="align-self-end">Images</a>
+        <div class="container">
+            <div class="row">
+                <div class="d-flex align-items-start justify-content-end">
+                    <div class="link_div"><a href="google_image.html">Images</a></div>
+                    <div class="link_div"><a href="advanced_search.html">Advanced</a></div>
+                </div>
             </div>
-            <div class="col-1">
-                <a href="advanced_search.html" class="align-self-end">Advanced</a>
-            </div>
-        </div>
+        </div>    
         <div class="container" id="cont">            
             <div class="row h-100">
                 <div class="col-sm-12 my-auto">
