--- a/google_image.html
+++ b/google_image.html
@@ -32,7 +32,7 @@
         <div class="container" id="cont">            
             <div class="row h-100">
                 <div class="col-sm-12 my-auto">
-                    <form action="http://www.google.com/search?q=<SEARCH TERM>&tbm=isch">
+                    <form action="http://www.google.com/search">
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">   
                             <div class="form-group">
                                 <input class="form-control form-control-md" type="text" name="q" id="foo">
