--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             .link_div {
                 margin-left: 100px;
             }
+            img {
+                height: 300px;
+                width: 800px;
+            }
         </style>
     </head>
     <body>
@@ -34,7 +38,8 @@
             <div class="row h-100">
                 <div class="col-sm-12 my-auto">
                     <form action="https://google.com/search">
-                        <div class="d-flex align-items-center flex-column justify-content-center h-100">   
+                        <div class="d-flex align-items-center flex-column justify-content-center h-100">  
+                            <div><img src="D:\Web Dev\search\Google-Search\Google logo Cropped.jpg" alt="Google Logo"></div> 
                             <div class="form-group">
                                 <input class="form-control form-control-md" type="text" name="q" id="foo">
                             </div>
