--- a/google_image.html
+++ b/google_image.html
@@ -40,7 +40,7 @@
                             </div>
                         </div>
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">
-
+                            <div><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.theverge.com%2F2015%2F9%2F1%2F9239769%2Fnew-google-logo-announced&psig=AOvVaw3eomQNjHbTE7oYzM3eP3s4&ust=1617357642053000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJCVzu7k3O8CFQAAAAAdAAAAABAD"></div>
                             <div class="form-group">
                                 <input type="submit" value="Google Search" class="btn">
                             </div>
