--- a/google_image.html
+++ b/google_image.html
@@ -3,23 +3,7 @@
     <head>
         <title>Image Search</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        
-        <style>
-            #foo {
-                width: 1000px;
-                border-radius: 15px;
-                border: 1px #000 solid;
-            }
-            #cont {
-                height: 90%;
-            }
-            html, body {
-                height: 100%;
-            }
-            .link_div {
-                margin-left: 100px;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
@@ -34,14 +18,14 @@
                 <div class="col-sm-12 my-auto">
                     <form action="http://www.google.com/search">
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">   
+                            <div><img src="D:\Web Dev\search\Google-Search\Google logo Cropped.jpg" alt="Google Logo"></div> 
                             <div class="form-group">
                                 <input class="form-control form-control-md" type="text" name="q" id="foo">
                                 <input type="hidden" id="custId" name="tbm" value="isch">
                             </div>
                         </div>
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">
-                            <div><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.theverge.com%2F2015%2F9%2F1%2F9239769%2Fnew-google-logo-announced&psig=AOvVaw3eomQNjHbTE7oYzM3eP3s4&ust=1617357642053000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJCVzu7k3O8CFQAAAAAdAAAAABAD"></div>
-                            <div class="form-group">
+                            <div class="form-group" id="cop">
                                 <input type="submit" value="Google Search" class="btn">
                             </div>
                         </div>
