--- a/index.html
+++ b/index.html
@@ -2,28 +2,8 @@
 <html lang="en">
     <head>
         <title>Search</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        
-        <style>
-            #foo {
-                width: 1000px;
-                border-radius: 15px;
-                border: 1px #000 solid;
-            }
-            #cont {
-                height: 90%;
-            }
-            html, body {
-                height: 100%;
-            }
-            .link_div {
-                margin-left: 100px;
-            }
-            img {
-                height: 300px;
-                width: 800px;
-            }
-        </style>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div class="container">
@@ -46,7 +26,7 @@
                         </div>
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">
 
-                            <div class="form-group">
+                            <div class="form-group" id="cop">
                                 <input type="submit" value="Google Search" class="btn">
                             </div>
                         </div>
