Added I'm Feeling Lucky and a few other changes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
                             <div class="form-group" id="cop">
                                 <input type="submit" value="Google Search" class="btn">
+                                <input type="submit" name="btnI" value="I'm Feeling Lucky" class="btn">
                             </div>
                         </div>
                     </form> 
