--- a/google_image.html
+++ b/google_image.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">
                             <div class="form-group" id="cop">
-                                <input type="submit" value="Google Search" class="btn">
+                                <input type="submit" value="Google Image Search" class="btn">
                             </div>
                         </div>
                     </form> 
