Made many layout changes

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="d-flex align-items-start justify-content-end">
-                    <div class="link_div"><a href="google_image.html">Images</a></div>
-                    <div class="link_div"><a href="advanced_search.html">Advanced</a></div>
+                <div class="d-flex align-items-start justify-content-end" style="position: absolute; top: 0; right: 0;">
+                    <div class="link_div"><a href="google_image.html" class="redirect">Images</a></div>
+                    <div class="link_div"><a href="advanced_search.html" class="redirect">Advanced</a></div>
                 </div>
             </div>
         </div>    
@@ -19,9 +19,9 @@
                 <div class="col-sm-12 my-auto">
                     <form action="https://google.com/search">
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">  
-                            <div><img src="D:\Web Dev\search\Google-Search\Google logo Cropped.jpg" alt="Google Logo"></div> 
+                            <div><img src="D:\Web Dev\search\Google-Search\Google logo Cropped.jpg" alt="Google Logo" class="img1"></div> 
                             <div class="form-group">
-                                <input class="form-control form-control-md" type="text" name="q" id="foo">
+                                <input class="form-control form-control-sm" type="text" name="q" id="foo">
                             </div>
                         </div>
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">
