--- a/google_image.html
+++ b/google_image.html
@@ -8,8 +8,8 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="d-flex align-items-start justify-content-end">
-                    <div class="link_div"><a href="index.html">Google</a></div>
+                <div class="d-flex align-items-start justify-content-end" style="position: absolute; top: 0; right: 0;">
+                    <div class="link_div"><a href="index.html" class='redirect'>Google</a></div>
                 </div>
             </div>
         </div>    
@@ -18,9 +18,9 @@
                 <div class="col-sm-12 my-auto">
                     <form action="http://www.google.com/search">
                         <div class="d-flex align-items-center flex-column justify-content-center h-100">   
-                            <div><img src="D:\Web Dev\search\Google-Search\Google logo Cropped.jpg" alt="Google Logo"></div> 
+                            <div><img src="D:\Web Dev\search\Google-Search\Google images logo.jpg" alt="Google Logo" class="img1"></div> 
                             <div class="form-group">
-                                <input class="form-control form-control-md" type="text" name="q" id="foo">
+                                <input class="form-control form-control-sm" type="text" name="q" id="foo">
                                 <input type="hidden" id="custId" name="tbm" value="isch">
                             </div>
                         </div>
