Completed the main projet

--- a/google_image.html
+++ b/google_image.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="row">
                 <div class="d-flex align-items-start justify-content-end" style="position: absolute; top: 0; right: 0;">
-                    <div class="link_div"><a href="index.html" class='redirect'>Google</a></div>
+                    <div class="link_div"><a href="index.html" class='redirect'>Google Search</a></div>
                 </div>
             </div>
         </div>    
