--- a/advanced_search.html
+++ b/advanced_search.html
@@ -4,15 +4,72 @@
         <title>Advanced Search</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"  integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
+
+        <style>
+            .ad_search_box {
+                width: 600px;
+            }
+        </style>
     </head>
     <body>
         <div class="container">
             <div class="row">
-                <div class="d-flex align-items-start justify-content-start">
+                <div class="d-flex align-items-start justify-content-start" style="position: absolute; top: 0; left: 0; background-color: rgb(252, 251, 250);">
                     <div><img class="img2" src="D:\Web Dev\search\Google-Search\Google logo Cropped.jpg" alt="Google Logo"></div>
                 </div>
+                <div class="d-flex align-items-start justify-content-end" style="position: absolute; top: 0; right: 0;">
+                    <div class="link_div"><a href="index.html" class='redirect'>Google Search</a></div>
+                </div>
+                <div style="position: fixed; top: 90px; left: 25px; border-bottom: 1px rgb(54, 51, 51) outset; height: 70px;">
+                    <h4 style="color: rgb(238, 127, 53);">Advanced Search</h3>
+                </div>
+                <div style="position: fixed; top: 200px; left: 25px;">
+                    <p style="font-size: 130%">Find pages with...</p>
+                </div>
             </div>
-        </div> 
+        </div>
+        <div class="container">
+            <form action="https://google.com/search">
+                <div class="form-group">
+                    <div style="position: fixed; top: 275px; left: 30px;">
+                        all these words:
+                    </div>
+                    <div style="position: fixed; top: 275px; left: 300px;">
+                        <input type="text" class="ad_search_box" name="as_q">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div style="position: fixed; top: 335px; left: 30px;">
+                        this exact word or phrase:
+                    </div>
+                    <div style="position: fixed; top: 335px; left: 300px;">
+                        <input type="text" class="ad_search_box" name="as_epq">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div style="position: fixed; top: 395px; left: 30px;">
+                        any of these words:
+                    </div>
+                    <div style="position: fixed; top: 395px; left: 300px;">
+                        <input type="text" class="ad_search_box" name="as_oq">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div style="position: fixed; top: 455px; left: 30px;">
+                        none of these words:
+                    </div>
+                    <div style="position: fixed; top: 455px; left: 300px;">
+                        <input type="text" class="ad_search_box" name="as_eq">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div style="position: fixed; top: 555px; left: 735px;">
+                        <input type="submit" value="Advanced Search" id="ad-btn">
+                    </div>    
+                </div> 
+            </form>
+            
+        </div>
     </body>
 
 </html>
